Fix menu overflow

--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -5,6 +5,7 @@
   width: 320px;
   height: 100%;
   padding: 25px;
+  box-sizing: border-box;
   overflow: auto;
   background-color: $cardBackground;
 }
